#355 Resolve minor codestyle issues and bug risks